--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* soft reset */
 *{
     box-sizing: border-box;
 }
@@ -6,12 +7,297 @@ html, body{
     margin: 0;
     padding: 0;
     font-family: "Roboto", sans-serif;
+    color: #191919;
+}
+
+h4, p{
+    margin: 0;
+}
+
+/* header */
+
+header{
+    background-color: #ffc017;
+    display: flex;
+    padding: 0.5% 10%;
+    justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    top: 0%;
+    z-index: 1000;
+    border-bottom: 2px solid #757575;
+}
+
+nav{
+    width: 40%;
+}
+
+ul{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  list-style: none;
+  margin: 0;
+}
+
+a{
+    text-decoration: none;
+    color: #191919;
+}
+
+#getStarted{
+    padding: 3%;
+    background-color: #191919;
+    border-radius: 2em;
+    width: 30%;
+    text-align: center;
+}
+
+#getStarted a{
+    color: white;
+}
+
+/* hero */
+
+#hero{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #ffc017;
+    border-bottom: 2px solid #757575;
+}
+
+#hero div{
+    padding-left: 9%;
 }
 
 h1{
     font-family: "Spectral", serif;
+    font-weight: 500;
+    font-size: 6em;
+    margin: 0%;
+    color: black;
 }
 
-#hero{
-    display: flex;
+#hero h2{
+    font-weight: 400;
+    margin-bottom: 15%;
 }
+
+#hero a{
+    padding: 2% 10%;
+    background-color: #191919;
+    border-radius: 2em;
+    text-align: center;
+    color: white;
+}
+
+/* main */
+
+/* prima section */
+
+#firstSection{
+    padding: 2% 7% 0.5%;
+    border-bottom: 2px solid #E6E7E7;
+}
+
+#trending{
+    display: flex;
+    align-items: center;
+}
+
+#trending h2{
+    font-weight: 600;
+    font-size: small;
+    padding-left: 0.5%;
+}
+
+#trendingContainer{
+    display: flex;
+    flex-wrap: wrap;
+    align-content: baseline;
+    justify-content: space-between;
+}
+
+.trendingArticle{
+    display: flex;
+    align-items: baseline;
+    width: 26%;
+    margin-bottom: 2%;
+}
+
+.trendingArticle > div{
+    width: 100%;
+    margin-left: 4%;
+}
+
+
+.trendingArticle > p{
+    color: #E6E7E7;
+    font-weight: 700;
+    font-size: xx-large;
+    padding-right: 1%;
+}
+
+.authors, .authorsSquare{
+    display: flex;
+    align-items: center;
+}
+
+.authors img{
+    border-radius: 50%;
+    width: 25px;
+    margin-right: 4%;
+}
+
+.authorsSquare img{
+    border-radius: 25%;
+    width: 25px;
+    margin-right: 4%;
+}
+
+.authors h4, .authorsSquare h4{
+    font-size: small;
+}
+
+.trendingArticle > div > h4{
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
+.trendingArticle div p{
+    color: #757575;
+    padding-right: 1%;
+}
+
+.date{
+    display: flex;
+    align-items: center;
+    color: #757575;
+}
+
+#firstSection span{
+    color: #757575;
+}
+
+/* seconda section */
+
+#secondSection{
+    padding: 4% 7% 0.5%;
+    display: flex;
+    justify-content: space-between;
+}
+
+/* articoli lato sinistro */
+
+#articles{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 90em;
+}
+
+.article{
+    display: flex;
+    width: 80%;
+    justify-content: space-between;
+}
+
+#secondSection .authors img{
+    margin-right: 5px;
+}
+
+.article > div{
+    width: 60%;
+}
+
+.article > div > h4{
+    font-weight: 700;
+    font-size: x-large;
+    margin-top: 0.5%;
+}
+
+.article > div > p{
+    color: #757575;
+    margin-bottom: 1.5%;
+    margin-top: 1.5%;
+}
+
+.article > img{
+    width: 30%;
+}
+
+#secondSection .date p{
+    margin-right: 1%;
+}
+
+#secondSection .date{
+    justify-content: space-between;
+    align-items: center;
+}
+
+.date div{
+    display: flex;
+    width: 80%;
+}
+
+#secondSection span{
+    background-color: #E6E7E7;
+    border-radius: 1em;
+    padding: 0.4em;
+}
+
+/* tags lato destro */
+
+#tagsBox {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+}
+
+
+#tagsBox h6 {
+    margin: 0;
+    margin-bottom: 0.6em;
+    font-size: small;
+}
+
+#tags {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    border-bottom: 1px solid #E6E7E7;
+    padding-bottom: 1.5em;
+}
+
+#tags button {
+    background-color: transparent;
+    border: 1px solid #E6E7E7;
+    color: #73778F;
+    font-size: 1.2em;
+    border-radius: 0.2em;
+    height: 2.5em;
+    margin-top: 0.8em;
+    margin-right: 0.8em;
+}
+
+#options ul{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    padding: 0%;
+}
+
+
+#options li {
+    list-style: none;
+    margin-right: 1.5em;
+    margin-bottom: 2%;
+
+}
+
+#options a {
+    text-decoration: none;
+    color: #73778F;
+}
+
