--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -253,8 +253,6 @@ h1{
     display: flex;
     flex-direction: column;
     width: 30%;
-    position: sticky;
-    top: 10%;
 }
 
 
@@ -262,6 +260,8 @@ h1{
     margin: 0;
     margin-bottom: 0.6em;
     font-size: small;
+    position: sticky;
+    top: 10%;
 }
 
 #tags {
@@ -270,6 +270,8 @@ h1{
     justify-content: flex-start;
     border-bottom: 1px solid #E6E7E7;
     padding-bottom: 1.5em;
+     position: sticky;
+    top: 12%;
 }
 
 #tags button {
@@ -281,6 +283,11 @@ h1{
     height: 2.5em;
     margin-top: 0.8em;
     margin-right: 0.8em;
+}
+
+#options{
+    position: sticky;
+    top: 38%;
 }
 
 #options ul{
