--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ header{
     position: sticky;
     top: 0%;
     z-index: 1000;
-    border-bottom: 2px solid #757575;
+    border-bottom: 1px solid #191919;
 }
 
 nav{
@@ -55,6 +55,29 @@ a{
 
 #getStarted a{
     color: white;
+}
+
+@media screen and (max-width: 768px) {
+    header{
+        padding: 2% 6%;
+    }
+    nav{
+        width: 90%;
+    }
+    #getStarted{
+        padding:2%;
+        width: 25%;
+    }
+}
+
+@media screen and (max-width: 576px) {
+   .liNone{
+    display: none;
+   }
+   #getStarted{
+    width: 35%;
+    padding: 3%;
+   }
 }
 
 /* hero */
@@ -90,6 +113,30 @@ h1{
     border-radius: 2em;
     text-align: center;
     color: white;
+}
+
+@media screen and (max-width: 768px) {
+    h1{
+        font-size: 5em;
+    }
+
+    #hero{
+        height: 20em;
+    }
+
+    #emmeDiv {
+        position: relative;
+    }
+    #emme{
+        position: absolute;
+        right: -12em;
+        top: -11.5em;
+        width: 28em;
+    }
+    #hero h2{
+        margin-bottom: 10%;
+        font-size: 1.2em;
+    }
 }
 
 /* main */
@@ -180,12 +227,26 @@ h1{
     color: #757575;
 }
 
+@media screen and (max-width: 768px) {
+    .trendingArticle{
+        width: 48%;
+        margin-bottom: 4%;
+    }
+}
+
 /* seconda section */
 
 #secondSection{
     padding: 4% 7% 0.5%;
     display: flex;
     justify-content: space-between;
+}
+
+@media screen and (max-width: 768px) {
+    #secondSection{
+        flex-direction: column-reverse;
+        padding: 4% 5% 2%;
+    }
 }
 
 /* articoli lato sinistro */
@@ -245,6 +306,29 @@ h1{
     background-color: #E6E7E7;
     border-radius: 1em;
     padding: 0.4em;
+}
+
+@media screen and (max-width: 768px) {
+    .article{
+        width: 100%;
+    }
+    #articles{
+        margin-top: 2%;
+        height: 75em;
+    }
+    .article > img{
+        height: 130px;
+        width: 30%;
+    }
+    .article p{
+        font-size: 0.9em;
+    }
+    .article > div > h4{
+        font-size: 1.2em;
+    }
+    .article > div{
+        width: 67%;
+    }
 }
 
 /* tags lato destro */
@@ -308,6 +392,32 @@ h1{
 #options a {
     text-decoration: none;
     color: #73778F;
+}
+
+@media screen and (max-width:768px) {
+    #tagsBox{
+        width: 80vw;
+    }
+
+    #tagsBox h6{
+        position: static;
+    }
+    #tags{
+       width: 80vw;
+       position: static;
+    }
+    #tags button{
+        font-size: 0.8em;
+        width: max-content;
+        padding: 0% 2%;
+    }
+    #options ul{
+    width: 80vw;
+    position: static;
+    }
+    #options a{
+        font-size: 0.8em;
+    }
 }
 
 /* classe per header bianco e pulsante verde */
