--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,11 @@ a{
    #getStarted{
     width: 35%;
     padding: 3%;
+    margin-left: 8%;
    }
+   header ul{
+    justify-content: flex-end;
+}
 }
 
 /* hero */
@@ -122,6 +126,7 @@ h1{
 
     #hero{
         height: 20em;
+        padding-bottom: 4%;
     }
 
     #emmeDiv {
@@ -136,6 +141,12 @@ h1{
     #hero h2{
         margin-bottom: 10%;
         font-size: 1.2em;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    #emmeDiv{
+        display: none;
     }
 }
 
@@ -234,6 +245,12 @@ h1{
     }
 }
 
+@media screen and (max-width: 576px){
+    .trendingArticle{
+        width: 100%;
+    }
+}
+
 /* seconda section */
 
 #secondSection{
@@ -246,6 +263,12 @@ h1{
     #secondSection{
         flex-direction: column-reverse;
         padding: 4% 5% 2%;
+    }
+}
+
+@media screen and (max-width: 576px){
+    #secondSection{
+        padding: 4% 2.8% 2%;
     }
 }
 
@@ -328,6 +351,19 @@ h1{
     }
     .article > div{
         width: 67%;
+    }
+}
+
+@media screen and (max-width: 576px){
+    .article p{
+        font-size: 0.8em;
+    }
+    .article > img{
+        height: 140px;
+        width: 34%;
+    }
+    .article > div{
+        width: 64%;
     }
 }
 
@@ -436,4 +472,19 @@ h1{
 
 #green a{
     color: white;
+}
+
+@media screen and (max-width:768px){
+    #green{
+        padding: 2%;
+        width: 25%;
+    }
+}
+
+@media screen and (max-width:576px){
+    #green{
+        width: 35%;
+        padding: 3%;
+        margin-left: 8%;
+    }
 }
